Updated ready player me src with tivolicloud

--- a/scripts/general/ready-player-me/ready-player-me.html
+++ b/scripts/general/ready-player-me/ready-player-me.html
@@ -269,7 +269,7 @@
 		<iframe
 			id="create"
 			class="ready-player-me"
-			src="https://fullbody.readyplayer.me"
+			src="https://tivolicloud.readyplayer.me"
 			allow="camera *; microphone *"
 			style="border: none; width: 100vw; height: 100vh"
 		></iframe>
